# chip8

./: README.md  main.py  pyproject.toml
src/: cpu.py  display.py  memory.py
tests/: test_cpu.py  test_integration.py
